Replace controler response

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "ext-iconv": "*",
         "mnapoli/bref": "^0.2.32",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/maker-bundle": "^1.8",
+        "symfony/twig-bundle": "*",
         "symfony/yaml": "*"
     },
     "require-dev": {
